# ViensOnVaDiscuter

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  README.md  companion.config  compile_flags.txt  main.py  run.bat
assets/exe/: app.rc
includes/: Config.h  DesktopCompanion.h  Utils.h  WinUtils.h
scripts/: GenerateCompileCommands.cmake  sync_assets.cmake
src/: DesktopCompanion.cpp  Utils.cpp  WinUtils.cpp  main.cpp  main.py
src/cpp/: main.cpp
